@@ -2756,6 +2756,7 @@
   void OSDMenuDestroyNoOSDUpdate(void);
   int  OSDMenuGetW(char *str, byte fntSize);
   int  OSDMenuGetH(char *str, byte fntSize);
+  void OSDMenuPutString(word rgn, dword x, dword y, dword maxX, char *str, dword fcolor, dword bcolor, byte fntSize, byte bDot, byte align);
   bool OSDMenuIsVisible(void);
 
   //Callback function for custom menu drawings
